// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BookListItemFormFields renders base form when props.editForm is false 1`] = `
<div>
  <div
    class="form-group"
  >
    <label
      class="form-label"
      for="author"
    >
      Author
    </label>
    <input
      class="form-control"
      id="author"
      placeholder="Kurt Vonnagut"
      type="text"
      value="asdf"
    />
  </div>
  <div
    class="form-group"
  >
    <label
      class="form-label"
      for="title"
    >
      Title
    </label>
    <input
      class="form-control"
      id="title"
      placeholder="Slaughterhouse-Five"
      type="text"
      value="asdf"
    />
  </div>
  <div
    class="form-group"
  >
    <label
      class="form-label"
      for="number-in-series"
    >
      Number in series
    </label>
    <input
      class="form-control"
      id="number-in-series"
      type="number"
      value="1"
    />
  </div>
  <div
    class="form-group"
  >
    <label
      class="form-label"
      for="category"
    >
      Category
    </label>
    <input
      class="form-control"
      id="category"
      list="categories"
      type="text"
      value="asdf"
    />
    <datalist
      id="categories"
    >
      <option
        value="asdf"
      />
    </datalist>
  </div>
</div>
`;

exports[`BookListItemFormFields renders edit form when props.editForm is true 1`] = `
<div>
  <div
    class="form-group"
  >
    <label
      class="form-label"
      for="author"
    >
      Author
    </label>
    <input
      class="form-control"
      id="author"
      placeholder="Kurt Vonnagut"
      type="text"
      value="asdf"
    />
  </div>
  <div
    class="form-group"
  >
    <label
      class="form-label"
      for="title"
    >
      Title
    </label>
    <input
      class="form-control"
      id="title"
      placeholder="Slaughterhouse-Five"
      type="text"
      value="asdf"
    />
  </div>
  <div
    class="form-group"
  >
    <label
      class="form-label"
      for="number-in-series"
    >
      Number in series
    </label>
    <input
      class="form-control"
      id="number-in-series"
      type="number"
      value="1"
    />
  </div>
  <div
    class="form-group"
  >
    <label
      class="form-label"
      for="category"
    >
      Category
    </label>
    <input
      class="form-control"
      id="category"
      list="categories"
      type="text"
      value="asdf"
    />
    <datalist
      id="categories"
    >
      <option
        value="asdf"
      />
    </datalist>
  </div>
  <div
    class="mb-3 form-row"
  >
    <div
      class="form-check-inline ml-1 form-group"
    >
      <div
        class="form-check"
      >
        <input
          class="form-check-input"
          id="purchased"
          type="checkbox"
        />
        <label
          class="form-check-label"
          for="purchased"
          title=""
        >
          Purchased
        </label>
      </div>
    </div>
    <div
      class="form-check-inline form-group"
    >
      <div
        class="form-check"
      >
        <input
          class="form-check-input"
          id="read"
          type="checkbox"
        />
        <label
          class="form-check-label"
          for="read"
          title=""
        >
          Read
        </label>
      </div>
    </div>
  </div>
</div>
`;
